refactor(alert): AlertEvent DTO 구조 및 알림 발행 로직 수정
알림 발생 시 디바이스의 정확한 위치와 임계값 상세 정보가 필요해짐에 따라 관련 객체와 전달 방식을 전반적으로 개선함.
- AlertEvent DTO에 point, deviceName, unit, threshold 정보가 포함되도록 구조 변경
- DeviceIdentity 객체에 roomId, point 속성을 추가하여 데이터 일관성 확보
- NotificationPublisher의 publish 메서드가 개별 인자 대신 DeviceIdentity를 받도록 시그니처 개선
- ValidationRuleRegistry를 주입받아 알림 메시지에 단위와 임계값 기준을 함께 전송하도록 로직 보강
- 변경된 시그니처에 맞추어 SensorDbSubFlowConfig 및 관련 단위 테스트 코드 업데이트